# catalyst-lab-2

./: .env  README.md  com.damiandudycz.CatalystLab.json  com.damiandudycz.CatalystLab.json~  flatpak-pip-generator  install.sh  meson.build  notes.md  squashfs-tools.json  unistall.sh
data/icons/: meson.build
po/: POTFILES  (+1 more)
src/: app_events.py  catalystlab.gresource.xml  catalystlab.in  main.py  main_page.py  meson.build  navigation_view_extensions.py  root_helper.py  style.css  window.py  window.ui
src/app_sections/: app_section.py  app_section_details.py  environments_section.py  environments_section.ui  welcome_section.py  welcome_section.ui
src/default_dir_content_builder/: default_dir_content_builder.py
src/environment/: environment.py
src/extensions/: __init__.py  navigation_view_extensions.py
src/git_directory/: git_directory.py  git_installation.py  git_manager.py  git_update.py
src/global_objects/: app_events.py  app_section.py  app_section_details.py  architecture.py  event_bus.py  helper_functions.py  modules_scanner.py  multistage_process.py  repositories.py  repository.py  runtime_env.py  settings.py
src/helper_types/: gtkboxabcmeta.py
src/main_sections/: main_section.py  main_section.ui  not_implemented.ui  welcome.ui  welcome_section.py  welcome_section.ui
src/main_window/: main_window.py  main_window.ui  main_window_content.py  main_window_content.ui  main_window_side_bar.py  main_window_side_bar.ui  main_window_side_menu.py  main_window_side_menu.ui  main_window_side_menu_button.py  root_access_button.py
src/mainwindow/: mainwindow.py
src/objects/git_directory/: git_directory.py  git_directory_default_content_builder.py  git_installation.py  git_manager.py  git_update.py
src/objects/global_objects/: app_section.py  architecture.py  helper_functions.py  modules_scanner.py  multistage_process.py  runtime_env.py  settings.py
src/objects/overlay/: overlay_directory.py  overlay_manager.py  overlay_update.py
src/objects/project/: project_directory.py  project_installation.py  project_manager.py  project_spec.py  project_stage.py  project_stage_argument_serialization.py  project_stage_arguments.py  project_stage_automatic_option.py  project_stage_compression_mode.py  project_stage_installation.py  project_update.py
src/objects/releng/: releng_directory.py  releng_installation.py  releng_manager.py
src/objects/root_helper/: root_function.py  root_helper_client.py  root_helper_server.py
src/objects/snapshot/: snapshot.py  snapshot_installation.py  snapshot_manager.py
src/objects/toolset/: toolset.py  toolset_installation.py  toolset_manager.py
src/overlay/: overlay_installation.py  overlay_manager.py  overlay_update.py
src/patches/: default-resolv-conf.patch  namespaces.patch
src/project/: project_directory.py  project_installation.py  project_manager.py
src/releng/: releng_directory.py  releng_installation.py  releng_manager.py  releng_update.py
src/root_helper/: root_function.py  root_helper_client.py  root_helper_server.py
src/snapshot/: snapshot.py  snapshot_installation.py  snapshot_manager.py
src/snapshot_manager/: snapshot_installation.py  snapshot_manager.py
src/toolset/: hotfix_patching.py  toolset.py  toolset_application.py  toolset_container.py  toolset_env_builder.py  toolset_installation.py  toolset_manager.py  toolset_update.py
src/toolset_env_builder/: toolset_env_builder.py
src/toolset_env_handler/: hotfix_patching.py  toolset_env_calls.py  toolset_env_handler.py
src/ui/app_sections/: environments_section.py  welcome_section.py
src/ui/components/: cl_toggle_group.py  root_access_button.py  root_command_output_view.py  root_command_output_view.ui  stages_tree_view.py  status_indicator.py
src/ui/git_directory/: git_directory_create_config_view.py  git_directory_details_view.py
src/ui/git_directory_create/: git_directory_create_config_view.py  git_directory_create_config_view.ui
src/ui/git_directory_details/: git_directory_details_view.py  git_directory_details_view.ui
src/ui/item_select/: item_select_view.py  item_select_view.ui
src/ui/main_window/: main_window.py  main_window.ui  main_window_content.py  main_window_content.ui  main_window_side_menu.py  main_window_side_menu.ui  main_window_side_menu_button.py  main_window_side_menu_button.ui
src/ui/multistage_process_execution_view/: multistage_process_execution_view.py  multistage_process_execution_view.ui
src/ui/overlay/: overlay_create_view.py
src/ui/overlay_create/: overlay_create_view.py  overlay_create_view.ui
src/ui/project/: project_create_view.py  project_create_view.ui  project_details_view.py  project_details_view.ui  project_spec_create_view.py  project_spec_create_view.ui  project_stage_create_view.py  project_stage_create_view.ui  project_stage_details_view.py  project_stage_details_view.ui
src/ui/project_create/: project_create_view.py  project_create_view.ui
src/ui/project_details/: project_details_view.py  project_details_view.ui
src/ui/releng/: releng_create_view.py  releng_create_view.ui  releng_select_view.py  releng_select_view.ui
src/ui/releng_create/: releng_create_view.py  releng_create_view.ui
src/ui/releng_details/: releng_details_view.py  releng_details_view.ui
src/ui/releng_select/: releng_select_view.py
src/ui/repository_list/: repository_list_view.py  repository_list_view.ui
src/ui/root_command_output/: root_command_output_view.py
src/ui/snapshot/: snapshot_create_view.py  snapshot_create_view.ui  snapshot_details_view.py  snapshot_details_view.ui
src/ui/snapshot_create/: snapshot_create_view.py  snapshot_create_view.ui
src/ui/snapshot_details/: snapshot_details_view.py  snapshot_details_view.ui
src/ui/snapshot_select/: snapshot_select_view.py  snapshot_select_view.ui
src/ui/toolset/: toolset_create_view.py  toolset_details_view.py  toolset_details_view.ui
src/ui/toolset_create/: toolset_create_view.py  toolset_create_view.ui
src/ui/toolset_details/: toolset_details_view.py  toolset_details_view.ui
src/ui/toolset_select/: toolset_select_view.py  toolset_select_view.ui
(+33 files in other folders)
